--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2554,7 +2554,7 @@ select.form-control.custom-select {
 
 
 
-header{margin-top:90px}
+header{margin-top:100px}
 .mx .form-control{padding: 0 .75rem !important;}
 .block_head{height:100px; position:fixed; top:0; width:100%; z-index:9999; background:rgba(34, 44, 69, 1);}
 .phone_bl{text-align:center; position:absolute; left:10px; top:1px; font-size:22px; width:390px; line-height: normal;}
@@ -5236,4 +5236,25 @@ body .vc_color-danger.vc_message_box .vc_message_box-icon {
 }
 .owl-carousel .owl-item {
     margin-left: -2px;
+}
+.menu2 li {
+    position: relative;
+}
+.sub_menu {
+    display: none;
+}
+.menu2 li:hover .sub_menu {
+    display: block;
+}
+.sub_menu {
+    position: absolute;
+    top: 32px;
+    left: 0;
+    width: 298px;
+    background-color: rgb(34, 44, 69);
+    text-align: left;
+}
+.sub_menu li {
+    display: block;
+    padding: 5px;
 }
